--- a/conversationgateway/Dockerfile
+++ b/conversationgateway/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx:latest
+ROM nginx:latest
 RUN apt-get update && apt-get install -y telnet vim tcpdump
 COPY nginx.conf /etc/nginx/nginx.conf
 EXPOSE 325467
