--- a/orch_commons/nginx.conf
+++ b/orch_commons/nginx.conf
@@ -5,7 +5,7 @@
 http {
     server {
          80;
-        server_name localhost;
+        r_name localhost;
 
         location / {
             root /usr/share/nginx/html;
