--- a/conversationgateway/Dockerfile
+++ b/conversationgateway/Dockerfile
@@ -1,5 +1,5 @@
 
 apt-get update && apt-get install -y telnet vim tcpdump
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY  /etc/nginx/nginx.conf
 EXPOSE 325467
 CMD ["nginx", "-g", "daemon off;"]
