--- a/conversationgateway/Dockerfile
+++ b/conversationgateway/Dockerfile
@@ -1,5 +1,5 @@
 
 apt-get update && apt-get install -y telnet vim tcpdump
-COPY  /etc/nginx/nginx.conf
+COP  /etc/nginx/nginx.conf
 EXPOSE 32
 CMD ["nginx", "-g", "daemon off;"]
