--- a/conversationgateway/Dockerfile
+++ b/conversationgateway/Dockerfile
@@ -1,5 +1,5 @@
 
-apt-get update && apt-get install -y telnet vim tcpdump
+a-get update && apt-get install -y telnet vim tcpdump
 CO  /etc/nginx/nginx.conf
 EXPOSE 32
 CMD ["nginx", "-g", "daemon off;"]
